--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel = "Stylesheet" href = "Hcss.css">
+<link rel = "Stylesheet" href = "/css/Hcss.css">
 <script src="Hjs.js"></script>
 <title> HOME </title>
 </head>
