--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel = "Stylesheet" href = "/css/Hcss.css">
-<script src="Hjs.js"></script>
+<script src="/js/Hjs.js"></script>
 <title> HOME </title>
 </head>
 <body>
