--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div id="Am" class="tabcontent">
   <p>Click the button to know more about me.<br>
-  <button type="button"> <a href="About.html">About me</a> </button>
+  <button type="button"> <a href="About.HTML">About me</a> </button>
 </div>
 
 </body>
